# hackathon_todo_phase_2

./: .env.example  .eslintignore  .gitignore  CHANGES.md  DEMO_UPDATE.md  NEW_COMMANDS.md  QUICK_TEST.sh  README.md  SORTING_GUIDE.md  TESTING_SUMMARY.md  TEST_RESULTS.md  UPDATE_COMMAND_IMPROVEMENT.md  docker-compose.yml  main.py  pyproject.toml  test_commands.py
.claude/: settings.local.json
.claude/agents/: constitution-enforcer.md
.specify/memory/: constitution.md
backend/: CLAUDE.md  main.py  pyproject.toml
backend/src/api/routes/: auth.py  tasks.py
backend/src/auth/: dependencies.py
backend/src/database/: connection.py
backend/src/models/: user.py
frontend/: CLAUDE.md  VOICE_COMMANDS_REFERENCE.md  VOICE_FEATURES.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/activity/: page.tsx
frontend/app/calendar/: page.tsx
frontend/app/messages/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/: ConfirmDialog.tsx  Navigation.tsx  RightSidebar.tsx  Sidebar.tsx  TaskEditForm.tsx  TaskForm.tsx  TaskList.tsx
frontend/components/voice/: VoiceChat.tsx
frontend/contexts/: AppContext.tsx
hf-backend-deploy/: Dockerfile  README.md  main.py  requirements.txt
hf-backend-deploy/src/auth/: jwt_utils.py
hf-backend-deploy/src/database/: base.py  init_db.py  migrate_add_recurring_dates.py
specs/001-phase1-core-crud/: spec.md
specs/002-task-model/: spec.md
specs/003-cli-interaction/: spec.md
specs/004-implementation-plan/: data-model.md  plan.md  quickstart.md  research.md
specs/005-task-breakdown/: tasks.md
specs/006-phase1-fullstack-webapp/: data-model.md  overview.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  main.py
src/models/: task.py
src/services/: id_generator.py  task_service.py
src/ui/: __init__.py  cli.py  formatter.py  messages.py
src/utils/: exceptions.py  validators.py
(+28 files in other folders)
