[project]
name = "agentic-todo-phase1"
version = "0.1.0"
description = "Phase I Core Essentials - Basic CRUD Todo CLI with in-memory storage"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Noor-ul-ain001" }
]
keywords = ["todo", "cli", "task-management", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
]

# No runtime dependencies for basic functionality (uses stdlib only)
dependencies = []


[project.optional-dependencies]


[project.scripts]
todo = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
